--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.2",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.14",
     "parser": "^0.1.4",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
@@ -27,12 +27,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
-    "@babel/node": "^7.16.5",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "^7.28.0"
+    "@babel/node": "^7.16.5"
   }
 }
