--- a/package.json
+++ b/package.json
@@ -13,20 +13,30 @@
     "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^9.6.5",
+    "firebase-admin": "^10.0.2",
+    "google-auth-library": "^7.11.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.2",
-    "nodemon": "^2.0.14",
+    "nodemon": "^2.0.15",
     "parser": "^0.1.4",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.8.0",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
-    "@babel/node": "^7.16.5"
+    "@babel/node": "^7.16.5",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.28.0"
   }
 }
